--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -113,10 +113,43 @@ li {
 
 /* blurry loading style start */
 
+.blurry-loading {
+  width: 100%;
+  height: 100vh;
+  position: relative;
+  opacity: .9;
+}
 
+.blurry-loading figure {
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  z-index: -1;
+  top: 0;
+  left: 0;
+}
+
+.blurry-loading figure img {
+width: 100%;
+height: 100%;
+object-fit: cover;
+}
 
 /* blurry loading style end */
 
+
+/* incremental-text style start */
+
+.incremental-text {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%,-50%);
+  font-size: 50px;
+  color: #fff;
+}
+
+/* incremental-text style end */
 
 
 /*=================================
